[package]
name = "oasis-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "oasis_simulation"
path = "src/lib.rs"

[[bin]]
name = "oasis"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.5", features = ["derive"] }

# social-simulation framework (socsim) — ABM のエンジン基盤．OASIS は LLM 駆動
# エージェントが **動的ソーシャルネットワーク** (BA フォローグラフ) 上で投稿・推薦・
# 行動選択を行うモデルなので core + engine + net に加え，LLM ヘルパ層 socsim-llm を
# 取り込む．socsim-llm の "live" feature が ollama + openai 両バックエンド
# (FallbackClient) を有効化する (issue #21)．設計 §4.2/§7 の `reqwest`+`sha2` は
# socsim-llm で置換する (gao2023/chuang2024/hua2024 と統一)．
# 具体的 commit は Cargo.lock で固定．
socsim-core   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
socsim-net    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-net" }
socsim-llm    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-llm", features = ["live"] }
# 出力ヘルパ (timestamp / run-dir / latest symlink / CSV・JSON writer)．
# ライブラリモードのボイラープレートを集約した共有クレット．
socsim-results = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-results" }
